2009-12-08  Ivan Maidanski <ivmai@mail.ru> (with input from Marcos Dione)

	* doc/README.macros (IGNORE_DYNAMIC_LOADING, PLATFORM_ANDROID):
	Document.
	* dyn_load.c: Don't include <elf.h> if PLATFORM_ANDROID.
	* dyn_load.c: Include bionic <linker.h> (instead of <link.h>) if
	PLATFORM_ANDROID.
	* include/private/gcconfig.h (LINUX): Define also if
	PLATFORM_ANDROID (for the windows-based toolkit).
	* include/private/gcconfig.h (SEARCH_FOR_DATA_START): Explicitly
	define for Android/x86 platform.
	* include/private/gcconfig.h (IGNORE_DYNAMIC_LOADING): Recognize
	new macro (undefine DYNAMIC_LOADING in this case).
	* include/private/gcconfig.h (CANCEL_SAFE): Don't define if
	PLATFORM_ANDROID.
	* include/private/gcconfig.h (IF_CANCEL): Fix definition for the
	explicitly defined CANCEL_SAFE.

2009-12-08  Ivan Maidanski <ivmai@mail.ru>

	* allchblk.c (GC_allochblk_nth): Don't call GC_remove_protection()
	if GC_DISABLE_INCREMENTAL.
	* reclaim.c (GC_reclaim_generic): Ditto.
	* checksums.c (GC_page_was_ever_dirty): Add prototype.
	* include/private/gc_locks.h (GC_mark_lock_holder): Don't declare
	unless PARALLEL_MARK.
	* include/private/gc_priv.h (GC_dirty_maintained,
	GC_page_was_dirty, GC_remove_protection, GC_dirty_init): Don't
	declare if GC_DISABLE_INCREMENTAL.
	* include/private/gc_priv.h (GC_print_finalization_stats): Don't
	declare if SMALL_CONFIG.
	* include/private/gcconfig.h (CHECKSUMS): Explicitly undefine if
	GC_DISABLE_INCREMENTAL (since nothing to check).
	* include/private/gcconfig.h (DEFAULT_VDB): Don't define if
	GC_DISABLE_INCREMENTAL.
	* os_dep.c (GC_dirty_maintained): Ditto.
	* mark.c (GC_initiate_gc): Don't call GC_read_dirty() if
	GC_DISABLE_INCREMENTAL.
	* os_dep.c (GC_gww_page_was_ever_dirty, GC_page_was_ever_dirty):
	Uncomment; define only if CHECKSUMS.

2009-12-08  Ivan Maidanski <ivmai@mail.ru>

	* darwin_stop_world.c (GC_push_all_stacks): Fix a bug (call
	GC_push_all_stack() instead of GC_push_all_stack_frames()).