@@ -1,3 +1,14 @@
+2009-12-08  Ivan Maidanski <ivmai@mail.ru>
+
+	* tests/test.c (reverse_test): Comment out a check for MSWIN32
+	(when determing BIG value) assuming outdated win32S.
+	* tests/test.c (reverse_test): Rename to reverse_test_inner;
+	change the declaration (to be of GC_fn_type); call itself thru
+	GC_call_with_gc_active() if the argument is zero.
+	* tests/test.c (reverse_test): New function added calling
+	reverse_test_inner thru GC_do_blocking (to test GC_do_blocking and
+	GC_call_with_gc_active).
+
 2009-12-08  Ivan Maidanski <ivmai@mail.ru> (with input from Marcos Dione)
 
 	* doc/README.macros (IGNORE_DYNAMIC_LOADING, PLATFORM_ANDROID):
